[package]
name = "near-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
near-jsonrpc-client = "0.6"
near-primitives = "0.17"
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
num-bigint = "0.4"
async-trait = "0.1"
dotenv = "0.15"
near-jsonrpc-primitives = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
num-traits = "0.2"

